--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
+    "sweetalert2": "^10.16.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3002 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
