--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "recharts": "^2.0.9",
     "sweetalert2": "^10.16.6",
     "web-vitals": "^1.0.1"
